--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./app.js" defer></script>
+  <script src="./dist/desafios/desafio3.js" defer></script>
 </head>
 
 <body>
-  <input id="input1">
-  <input id="input2">
-  <button id="button">Clique aqui</button>
+  <input id="soma">
+  <p id="campo-saldo">0</p>
+  <button id="atualizar-saldo">atualizar saldo</button>
+  <button id="limpar-saldo">limpar saldo</button>
 </body>
 
 </html>
